[package]
authors = ["ojonetwork"]
edition = "2021"
name = "std-reference"
version = "0.1.0"

exclude = [
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw2 = "1.0.1"
cw-controllers = "0.16.0"
cosmwasm-std = "1.1.5"
cw-storage-plus = "0.16.0"
serde_json = "1.0.81"
cosmwasm-schema = "1.1.5"
thiserror = "1.0.37"
semver = "1.0.14"
