[package]
authors = ["ojonetwork"]
edition = "2021"
name = "std-reference"
version = "0.0.1"

exclude = [
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.0", default-features = false }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.0.0" }

secret-toolkit = { version = "0.7.0",  features = [
    "permit",
    "viewing-key",
] }
secret-toolkit-crypto = { version = "0.7.0", features = ["rand", "hash"]}

#secret-toolkit-crypto = { package = "secret-toolkit-crypto", version = "0.7.0", features = ["rand", "hash"] }

schemars = "0.8.11"
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
base64 = "0.13.0"
cosmwasm-schema = { version = "1.1.8" }
thiserror = "1.0.37"
