[package]
authors = ["ojonetwork"]
edition = "2021"
name = "std-reference"
version = "0.1.6"

exclude = [
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw2 = "1.0.1"
cw-controllers = "1.0.1"
cosmwasm-std = "1.2.1"
cw-storage-plus = "1.0.1"
serde_json = "1.0.104"
cosmwasm-schema = "1.2.1"
thiserror = "1.0.38"
semver = "1.0.16"
